container div.  2 rows 'About Me' and 'img/lorem text'.  Added style.css

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 
     <title>Randall Frye</title>
   </head>
@@ -32,6 +33,22 @@
         </div>
       </nav>
 
+      <!--ABOUT ME-->
+      <div class="container">
+          <div class="row">
+            <div class="col-12">
+                  <h1>About Me</h1>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-4">
+                <img class="headshot" src="Headshot.jpeg" alt="Randall Frye">
+            </div>
+            <div class="col-8">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo amet tempore dolorem animi illo voluptate eos! Minima necessitatibus fuga itaque suscipit nulla labore pariatur tempora nostrum! Enim rerum sequi illum.</p>
+            </div>
+          </div>
+      </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
