edited contact.hmtl. formatted form to include email.  working on media query.

--- a/contact.html
+++ b/contact.html
@@ -34,18 +34,18 @@
 
     <div class="container">
       <div style="text-align:center">
-        <h2>Contact Me</h2>
+        <h2 id="contactMe">Contact Me</h2>
       </div>
       <div class="row">
-        <div class="col-4">
-          <img src="/w3images/map.jpg" style="width:100%">
+        <div class="col">
+          <img id="Taco" src="tacoandme.jpeg" alt="Randall and Taco" style="width:100%">
         </div>
         <div class="col">
           <form action="/action_page.php">
             <label for="fname">First Name</label>
-            <input type="text" id="fname" name="firstname" placeholder="Your name..">
+            <input type="text" id="fname" name="firstname" placeholder="First name..">
             <label for="lname">Last Name</label>
-            <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+            <input type="text" id="lname" name="lastname" placeholder="Last name..">
             <label for="email">Email</label>
             <input type="text" id="email" name="Email" placeholder="john.doe@email.com">
             <label for="subject">Subject</label>
@@ -58,10 +58,5 @@
 
 
       
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-  </body>
+</body>
 </html>
