small changes to ul spacing and editing connection name on CSS

--- a/index.html
+++ b/index.html
@@ -41,12 +41,10 @@
                   <h4 class="title">Aspiring Web Developer</h4>
                   <p style= "padding: 5px; font-size: 18px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi magni architecto vel, iste quas accusamus impedit placeat saepe ratione libero pariatur error! Nulla exercitationem rerum minima optio numquam corrupti alias. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente quas suscipit est quos repellendus ad at sunt illum, rerum ex numquam cum veritatis tempora, temporibus cupiditate. Repudiandae reiciendis nisi in. Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque voluptatum, odit eum, totam magni autem deleniti rerum fuga fugiat facere corporis vel sequi voluptates sapiente velit adipisci at aspernatur architecto? Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum debitis unde eos velit qui itaque in, iure sequi. Recusandae aut eligendi iusto placeat nobis fugiat laboriosam blanditiis natus laborum enim?</p>
                   <h4 class="title">Find Me On</h4>
-                    <ul style="font-size: 15px;">
+                    <ul id="indexList">
                       <li>Instagram: <a href="https://www.instagram.com/rffrye_designs/" target="_blank">@rffrye_designs</a>
                       </li>
-                      <li>Git Hub: <a href="https://github.com/rffrye" target="_blank">@rffrye</a>
-
-                      </li>
+                      <li>Git Hub: <a href="https://github.com/rffrye" target="_blank">@rffrye</a></li>
                     </ul>
             </div>
           </div>
