added project cards to portfolio page.

--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
       </div>
       <div class="row">
         <div class="col">
-          <img id="Taco" src="tacoandme.jpeg" alt="Randall and Taco">
+          <img id="Taco" src="codeimg.jpg" alt="web dev">
         </div>
         <div class="col">
           <form action="/action_page.php">
