--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,99 @@
         </div>
       </nav>
 
-     
+      <div class="row">
+        <div class="col-1"></div>
+        <div class="card" style="max-width: 40%;">
+          <div class="row no-gutters">
+            <div class="col-6">
+              <img id="placeholder" src="placeholder.png" class="card-img" alt="item 1">
+            </div>
+            <div class="col-6">
+              <div class="card-body">
+                <h5 class="card-title">Project 1</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore cumque saepe ullam eaque debitis. Magnam enim expedita vero ad asperiores officiis, voluptatum sed provident, aliquid cupiditate, ex at quod delectus.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card mb-3" style="max-width: 40%;">
+          <div class="row no-gutters">
+            <div class="col-6">
+              <img id="placeholder" src="placeholder.png" class="card-img" alt="item 1">
+            </div>
+            <div class="col-6">
+              <div class="card-body">
+                <h5 class="card-title">Project 2</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis culpa tempora, beatae at dignissimos alias rem ex consectetur dolores aut nemo non magnam esse, maiores excepturi perspiciatis explicabo aliquid unde.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-1"></div>
+      </div>
+
+      <div class="row">
+        <div class="col-1"></div>
+        <div class="card" style="max-width: 40%;">
+          <div class="row no-gutters">
+            <div class="col-6">
+              <img id="placeholder" src="placeholder.png" class="card-img" alt="item 1">
+            </div>
+            <div class="col-6">
+              <div class="card-body">
+                <h5 class="card-title">Project 3</h5>
+                <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae ipsam itaque ratione voluptatum, vel ut? Alias minus tenetur nostrum? Voluptatibus cumque incidunt molestias nemo assumenda nesciunt ipsa itaque expedita rerum.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card mb-3" style="max-width: 40%;">
+          <div class="row no-gutters">
+            <div class="col-6">
+              <img id="placeholder" src="placeholder.png" class="card-img" alt="item 1">
+            </div>
+            <div class="col-6">
+              <div class="card-body">
+                <h5 class="card-title">Project 4</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. A aspernatur debitis sunt explicabo eveniet iure, repellat voluptate atque soluta corporis voluptatem iusto. Quos delectus optio vero architecto vitae sequi sunt.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-1"></div>
+      </div>
+
+      <div class="row">
+        <div class="col-1"></div>
+        <div class="card" style="max-width: 40%;">
+          <div class="row no-gutters">
+            <div class="col-6">
+              <img id="placeholder" src="placeholder.png" class="card-img" alt="item 1">
+            </div>
+            <div class="col-6">
+              <div class="card-body">
+                <h5 class="card-title">Project 5</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium unde repellendus reiciendis et accusamus, nihil eos. Non, nostrum. Ab autem culpa earum libero ad. Excepturi nesciunt numquam architecto aperiam libero!</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card mb-3" style="max-width: 40%;">
+          <div class="row no-gutters">
+            <div class="col-6">
+              <img id="placeholder" src="placeholder.png" class="card-img" alt="item 1">
+            </div>
+            <div class="col-6">
+              <div class="card-body">
+                <h5 class="card-title">Project 6</h5>
+                <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum consequuntur nam itaque autem molestias odio dolore sint alias sed. Sequi hic voluptatibus sapiente fugiat eos quisquam quae deleniti id rem?</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-1"></div>
+      </div>
+      
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
