portfolio divs. linked to media query and styled to match the rest of the website.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               </li>
           </ul>
         </div>
-      </nav>
+    </nav>
          
         <div class="card">
           <div class="row">
@@ -54,6 +54,13 @@
               </div>
           </div>
         </div>
+      
+        <footer class="footer mt-auto py-3">
+          <div class="containerfoot">
+            <span class="text-muted">Designed and coded by Randall Frye</span>
+          </div>
+        </footer>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
