--- a/contact.html
+++ b/contact.html
@@ -36,9 +36,9 @@
       <div style="text-align:center">
         <h2 id="contactMe">Contact Me</h2>
       </div>
-      <div class="row">
+      <div class="row" id=media>
         <div class="col">
-          <img id="Taco" src="codeimg.jpg" alt="web dev">
+          <img id="code" src="codeimg.jpg" alt="web dev">
         </div>
         <div class="col">
           <form action="/action_page.php">
@@ -55,6 +55,12 @@
         </div>
       </div>
     </div>
+
+    <footer class="footer mt-auto py-3">
+      <div class="containerfoot">
+        <span class="text-muted">Designed and coded by Randall Frye</span>
+      </div>
+    </footer>
 
 
       
