css formatting of footer

--- a/portfolio.html
+++ b/portfolio.html
@@ -85,7 +85,7 @@
 
       <footer class="footer mt-auto py-3">
         <div class="containerfoot">
-          <span class="text-muted">Designed and coded by Randall Frye</span>
+          <span class="textfoot">Designed and coded by Randall Frye</span>
         </div>
       </footer>
        
