change find me buttons on contact page, linked , and styled

--- a/index.html
+++ b/index.html
@@ -40,19 +40,21 @@
                 <h3 style=" font-weight: 200;">Randall Frye</h3>
                   <h4 class="title">Aspiring Web Developer</h4>
                   <p style= "padding: 5px; font-size: 18px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi magni architecto vel, iste quas accusamus impedit placeat saepe ratione libero pariatur error! Nulla exercitationem rerum minima optio numquam corrupti alias. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente quas suscipit est quos repellendus ad at sunt illum, rerum ex numquam cum veritatis tempora, temporibus cupiditate. Repudiandae reiciendis nisi in. Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque voluptatum, odit eum, totam magni autem deleniti rerum fuga fugiat facere corporis vel sequi voluptates sapiente velit adipisci at aspernatur architecto? Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum debitis unde eos velit qui itaque in, iure sequi. Recusandae aut eligendi iusto placeat nobis fugiat laboriosam blanditiis natus laborum enim?</p>
-                  <h4 class="title">Find Me On</h4>
-                    <ul id="indexList">
-                      <li>Instagram: <a href="https://www.instagram.com/rffrye_designs/" target="_blank">@rffrye_designs</a>
-                      </li>
-                      <li>Git Hub: <a href="https://github.com/rffrye" target="_blank">@rffrye</a></li>
-                    </ul>
+                  <h4 class="title" style="text-align: center;">Find Me On</h4>
             </div>
           </div>
           <div class="row">
-              <div class="col-12">
-                <a href="contact.html"><button class="button">Contact Me</button></a>
+              <div class="col-4">
+                <a href="https://www.instagram.com/rffrye_designs/" target="_blank"><button class="button">Instagram</button></a>
+              </div> 
+              <div class="col-4">
+                <a href="https://github.com/rffrye" target="_blank"><button class="button">Git Hub</button></a>
+              </div> 
+              <div class="col-4">
+                <a href="https://www.linkedin.com/in/randall-frye-89a66b77/" target="_blank"><button class="button">Linkedin</button></a>  
               </div>
-          </div>
+            </div>
+          </div>  
         </div>
       
         <footer class="footer mt-auto py-3">
