added about me text.  changed padding and font size

--- a/index.html
+++ b/index.html
@@ -37,12 +37,14 @@
           <div class="row">
             <div class="col-12">
             <img id="headshot" src="Headshot2.jpeg" alt="Randall">
-                <h3 style=" font-weight: 200;">Randall Frye</h3>
-                  <h4 class="title">Aspiring Web Developer</h4>
-                  <p style= "padding: 5px; font-size: 18px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi magni architecto vel, iste quas accusamus impedit placeat saepe ratione libero pariatur error! Nulla exercitationem rerum minima optio numquam corrupti alias. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente quas suscipit est quos repellendus ad at sunt illum, rerum ex numquam cum veritatis tempora, temporibus cupiditate. Repudiandae reiciendis nisi in. Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque voluptatum, odit eum, totam magni autem deleniti rerum fuga fugiat facere corporis vel sequi voluptates sapiente velit adipisci at aspernatur architecto? Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum debitis unde eos velit qui itaque in, iure sequi. Recusandae aut eligendi iusto placeat nobis fugiat laboriosam blanditiis natus laborum enim?</p>
-                  <h4 class="title" style="text-align: center;">Find Me On</h4>
-            </div>
+                <h2 style=" font-weight: 200;">Randall Frye</h2>
+                  <h3 class="title">Aspiring Web Developer</h3>
+                  <p style= "padding: 10px; font-size: 20px;">My name is Randall.  I am a working Interior Designer, expanding my education, to include web development as a marketable skill.  I am self-driven to be the best I can possibly be in any situation.  I love to create!  Whether that be a clients home or a  web application, I can make any of your needs and wishes come true.  I graduated from UNC Chapel Hill in 2013 and have returned to the well-known and highly regarded school to continue my education.</p>
+
+                  <p style= "padding: 10px; font-size: 20px;">After graduating from UNC Coding Bootcamp, I will have all the necessary skills and knowledge to build Full Stack web applications.  Proficient in MongoDB, MySQL, Git, HTML, CSS, React.js, jQuery, JavaScript, Node.js, and more.</p>
+           </div>
           </div>
+          <h4 class="title" style="text-align: center;">Find Me On</h4>
           <div class="row">
               <div class="col-4">
                 <a href="https://www.instagram.com/rffrye_designs/" target="_blank"><button class="button">Instagram</button></a>
